--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,28 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* Contact.jsx image */
+.formImg2 {
+  position: relative;
+  left: 70%;
+  bottom: 290px;
+  height: 195px;
+  width: 350px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* Carrer.jsx image */
+
+.formImg {
+  position: relative;
+  left: 70%;
+  bottom: 280px;
+  height: 200px;
+  width: 330px;
+}
+
+@media only screen and (min-width: 320px) and (max-width: 479px) {
+  .formImg {
+    position: relative;
+    z-index: 2;
+    left: 67%;
+    width: 25%;
+    bottom: 288px;
+  }
 }
