--- a/src/assets/CSS/shopnow.css
+++ b/src/assets/CSS/shopnow.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
 .shopnow {
     background: url('../../assets/img/Home/image\ 19\ \(2\).png');
 
@@ -138,4 +141,17 @@
 .star1 {
     color: rgb(158, 151, 151);
     margin: 7px;
+}
+
+
+
+
+.BannerT a{
+    color: #FFFFFF;
+    font-family: "Poppins", sans-serif;
+    letter-spacing: 3px;
+}
+.bannerH {
+    color: #FFFFFF;
+    font-family: "Poppins", sans-serif;
 }
