--- a/src/assets/CSS/homebanner.css
+++ b/src/assets/CSS/homebanner.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 500px;
     /* or any height you need */
-    background-image: url('../img/Home/image\ 36.png');
+    /* background-image: url('../img/Home/image\ 36.png'); */
     background-size: contain;
     /* or 'contain' */
     background-repeat: no-repeat;
@@ -28,9 +28,10 @@
     background: linear-gradient(to left, rgba(238, 88, 93, 0) 0%, rgba(238, 88, 93, 0.2) 18.61%, rgba(238, 88, 93, 0.814196) 61.08%, #EE585D 81.38%);
 
     position: relative;
-    top: 150px;
-    left: 90px;
-    padding-right: 150px !important;
+    top: 450px;
+    padding: 50px;
+    /* left: -20px; */
+    /* padding-right: 150px !important; */
 
 
 }
@@ -50,6 +51,8 @@
     color: white;
     border: 2px solid white;
     width: 300px;
+    position: relative;
+    left: 850px;
 }
 
 .bannerform2 {
