--- a/src/assets/CSS/aboutus.css
+++ b/src/assets/CSS/aboutus.css
@@ -60,3 +60,10 @@
 .getintouchbg{
   background: url('../img/Contactus/background\ 6.png');
 }
+
+.leadershippara{
+  background-color: #E84C52;
+}
+.spaceing{
+  margin-bottom: 10px;
+}
