--- a/src/assets/CSS/productTechnicaldata.css
+++ b/src/assets/CSS/productTechnicaldata.css
@@ -1,7 +1,7 @@
 
-.tabbuttons:hover{
+/* .tabbuttons:hover{
     color:black !important;
-}
+} */
 .nav-pills .nav-link.active{
     border: 3px solid rgba(232, 76, 82, 1);
     background-color: rgba(232, 76, 82, 1) !important;
