--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
-
-.dropdown-menu{
+.dropdown-menu {
   border-radius: 0 !important;
   padding: 0;
   margin: 0;
@@ -7,7 +6,7 @@
 }
 
 
-.dropdown-menu-btn{
+.dropdown-menu-btn {
   letter-spacing: 2px;
   text-align: center;
 }
@@ -140,4 +139,18 @@
   left: 75%;
   width: 25%;
   top: -125px;
+}
+
+
+/* hj 03/7/24 NewsAndEvent.jsx */
+.newsEventTitleFont {
+  font-family: "Poppins", sans-serif;
+
+
+}
+
+.newsEventDescFont {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
