--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,10 @@
 
 .header-logo {
   position: absolute;
-  width: 160px;
-  left: 10;
+  width: 150px;
+  left: 48%;
+  
+  
 }
 /* Carrer.jsx image */
 
