--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,6 @@
   font-size: 20px;
 }
 
-/****************** Footer ************/
 .footertext {
   text-align: justify;
 }
@@ -86,7 +85,7 @@
 
 
 .footerback {
-  background: url("./assets/img/Home/image\ 29.png");
+  /* background: url("./assets/img/Home/image\ 29.png"); */
   background-size: cover;
 }
 
@@ -142,7 +141,6 @@
 }
 
 
-/* hj 03/7/24 NewsAndEvent.jsx */
 .newsEventTitleFont {
   font-family: "Poppins", sans-serif;
 
@@ -156,7 +154,6 @@
 }
 
 
-/* hj 03/7/24 BlogCard.jsx */
 .blogCardTitle{
   font-family: "Poppins", sans-serif;
 
