--- a/src/assets/CSS/mainbanner.css
+++ b/src/assets/CSS/mainbanner.css
@@ -39,7 +39,8 @@
 
 @media (max-width: 600px) {
     .oueprd {
-        font-size: 1.2rem;
+        font-size: 1.2rem !important;
+        line-height: 25px !important;
     }
 
     .ourprdimg {
