--- a/src/assets/CSS/shophome.css
+++ b/src/assets/CSS/shophome.css
@@ -132,7 +132,7 @@
     background: rgb(255, 255, 255);
     border-radius: 15px;
     box-shadow: 4px 4px 40px 0px #00000040;
-
+    height: 300px;
     padding: 30px;
     padding-top: 60px;
     margin: 20px;
