--- a/src/assets/CSS/requestcall.css
+++ b/src/assets/CSS/requestcall.css
@@ -7,9 +7,10 @@
 
 @media only screen and (max-width: 767px) {
     .requestcallback {
-        height: 1100px;
+        height: 530px;
         background-size: cover;
         background-repeat: no-repeat;
+        
     }
 
 
@@ -19,8 +20,11 @@
         padding-left: 0px !important;
         padding-right: 0px !important;
         position: relative;
-        top: -321px !important;
-
+        top: -691px !important;
+        
+    }
+    .viod{
+        padding-top: 240px;
     }
 }
 
