--- a/src/assets/CSS/Service.css
+++ b/src/assets/CSS/Service.css
@@ -1,42 +1,30 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap');
-
-.ptext {
+.ptext{
     font-weight: 400;
+    
     font-family: "Roboto", sans-serif;
     font-style: normal;
-}
 
-.card-info {
+    
+}
+  
+.card-info{
     top: 0;
     right: 0;
 }
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-.frontH {
+
+
+.frontH{
     color: #FFFFFF;
-    margin-top: -250px;
+   
+    margin-top: -250px ;
 }
 
-.backH {
+
+.backH{
     margin-top: -400px;
     text-align: center;
-    color: #FFFFFF;
+    color:#FFFFFF;
 }
-
-@media (max-width: 767px) {
-    .frontH, .backH {
-        margin-top: 0;
-        font-size: 1.2rem;
-    }
-    
-    .card-body {
-        padding: 1rem;
-    }
-    
-    .backP {
-        padding: 1rem;
-    }
-}
-
-
-
