--- a/src/assets/CSS/aboutus.css
+++ b/src/assets/CSS/aboutus.css
@@ -61,6 +61,10 @@
     height: auto;
     width: 170px !important;
   }
+  .teamimg{
+    height: 300px;
+    width: 100%;
+  }
 }
 
 .prdimg {
@@ -73,7 +77,10 @@
   background: #CD4247;
   height: 133px;
 }
-
+.teamimg{
+  height: 400px;
+  width: 100%;
+}
 .sencodesubtext {
   background: #E84C52;
   position: relative;
