--- a/src/App.css
+++ b/src/App.css
@@ -50,10 +50,40 @@
 
 .header-logo {
   position: absolute;
-  width: 130px;
+  width: 100px;
   left: 47.5%;
-  bottom: 5px;
+  bottom: -6px;
 }
+
+@media screen and (min-width: 1400px) {
+  .header-logo {
+    position: absolute;
+    width: 130px;
+    left: 48.5%;
+    bottom: -14px;
+  }
+  .navbarspacing{
+    margin-bottom: 15px !important;
+  }
+  .hedershadow {
+    padding-top: 10px !important;
+    padding-bottom: 10px !important;
+  }
+  .header-logo.small-logo {
+    width: 80px !important;
+    padding: 0px !important;
+    left: 0px;
+    bottom: -18px !important;
+  }
+  
+}
+.navbarspacing{
+  margin-bottom: 5px;
+}
+.navbar{
+  padding: 0px !important;
+}
+
 
 .blogspace {
   margin-right: 100px;
@@ -61,13 +91,14 @@
 
 .hedershadow {
   box-shadow: 8px 10px 10px 0px #00000040;
+  padding-top: 5px;
 }
 
 .header-logo.small-logo {
-  width: 60px;
-
+  width: 50px;
+padding: 0px !important;
   left: 0px;
-  bottom: 0px;
+  bottom: -5px;
 }
 
 
