--- a/src/assets/CSS/productlist.css
+++ b/src/assets/CSS/productlist.css
@@ -9,7 +9,7 @@
     color: white;
     list-style: none;
     font-size: 16px;
-    border-bottom: 1px solid rgba(216, 211, 211, 1)
+    border-bottom: 1px solid rgb(235, 213, 213)
 }
 
 
