--- a/src/assets/CSS/productTechnicaldata.css
+++ b/src/assets/CSS/productTechnicaldata.css
@@ -8,6 +8,7 @@
 .tabbuttons{
     border: 3px solid rgba(232, 76, 82, 1);
     color: black;
+    font-size: 20px;
 }
  tr,th,td {
     border: 1px solid rgb(199, 193, 193) 
