--- a/src/assets/CSS/shophome.css
+++ b/src/assets/CSS/shophome.css
@@ -111,6 +111,7 @@
 .testomonialprofile {
     border-radius: 50%;
     height: 130px;
+    width: 130px;
     border: 7px solid rgb(242, 236, 236);
     box-shadow: 4px 4px 40px 0px #00000040;
 
