--- a/src/assets/CSS/homebanner.css
+++ b/src/assets/CSS/homebanner.css
@@ -14,6 +14,7 @@
     position: static;
 }
 
+  
 @media (max-width: 700px) {
     .carsimg {
         height: 400px !important;
@@ -71,7 +72,7 @@
     top: 10px;
 }
 
-@media screen and (min-width: 1400px) {
+@media screen and (min-width: 1600px) {
     .bannerform {
         background: transparent;
         color: white;
@@ -258,12 +259,13 @@
     font-weight: 500;
 }
 
-@media screen and (min-width: 1400px) {
+@media screen and (min-width: 1600px) {
     .productapplictions {
         font-size: 20px !important;
         letter-spacing: 1px;
         font-weight: 500;
     }
+
 }
 @media screen and (max-width: 800px) {
     .productapplictions {
@@ -272,7 +274,9 @@
         font-weight: 500;
     }
 }
-
+.bannertext{
+    font-size: 17px !important;
+}
 .pulgersubtitle {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
