--- a/src/assets/CSS/Service.css
+++ b/src/assets/CSS/Service.css
@@ -1,30 +1,30 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-.ptext{
-    font-weight: 400;
-    
-    font-family: "Roboto", sans-serif;
-    font-style: normal;
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+.ptext {
+  font-weight: 400;
 
-    
-}
-  
-.card-info{
-    top: 0;
-    right: 0;
-}
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-
-
-.frontH{
-    color: #FFFFFF;
-   
-    margin-top: -250px ;
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  text-align: justify !important;
 }
 
+.card-info {
+  top: 0;
+  right: 0;
+}
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-.backH{
-    margin-top: -400px;
-    text-align: center;
-    color:#FFFFFF;
+.frontH {
+  color: #ffffff;
+  margin-top: -250px;
+  padding:0px 30px;
+}
+
+.backH {
+  margin-top: -400px;
+  text-align: center;
+  color: #ffffff;
+}
+.backP{
+    text-align: justify !important;
+
 }
