--- a/src/assets/CSS/productlist.css
+++ b/src/assets/CSS/productlist.css
@@ -1,82 +1,77 @@
 .produclistfttop {
-    background: rgba(238, 88, 93, 1);
-
+  background: rgba(238, 88, 93, 1);
 }
-
-
 
 .produclistcontetst {
-    color: white;
-    list-style: none;
-    font-size: 16px;
-    border-bottom: 1px solid rgb(235, 213, 213)
+  color: white;
+  list-style: none;
+  font-size: 16px;
+  border-bottom: 1px solid rgb(235, 213, 213);
 }
 
-
 .productlistimgssubtitle {
-    letter-spacing: 4px;
-    position: relative;
-    top: 50px;
-    padding-left: 150px;
+  letter-spacing: 4px;
+  position: relative;
+  top: 50px;
+  padding-left: 150px;
 }
 
 .productlistimgstitle {
-    font-size: 70px;
-    letter-spacing: 8px;
-    font-weight: 900;
-    color: rgba(216, 211, 211, 1);
-    position: relative;
-    top: 40px;
-    padding-left: 150px;
+  font-size: 70px;
+  letter-spacing: 8px;
+  font-weight: 900;
+  color: rgba(216, 211, 211, 1);
+  position: relative;
+  top: 40px;
+  padding-left: 150px;
 }
 
 .productlistproductimg {
-    position: relative;
-    top: -90px;
-    left: 100px;
+  position: relative;
+  top: -90px;
+  left: 100px;
 }
-.productlistimgsapplication{
+.productlistimgsapplication {
+  font-size: 13px;
+}
+@media screen and (max-width: 670px) {
+  .productlistimgssubtitle {
+    letter-spacing: 4px;
+    position: static;
+    top: 0px;
+    padding-left: 0px;
+  }
+
+  .productlistimgstitle {
+    font-size: 70px;
+    letter-spacing: 4px;
+    font-weight: 900;
+    color: rgba(216, 211, 211, 1);
+    position: static;
+    top: 0px;
+    padding-left: 0px;
+  }
+
+  .productlistproductimg {
+    position: static;
+    top: 0px;
+    left: 0px;
+  }
+  .productlistimgsapplication {
     font-size: 13px;
-}
-@media screen  and (max-width: 670px) {
-    .productlistimgssubtitle {
-        letter-spacing: 4px;
-        position: static;
-        top: 0px;
-        padding-left: 0px;
-    }
-    
-    .productlistimgstitle {
-        font-size: 70px;
-        letter-spacing: 4px;
-        font-weight: 900;
-        color: rgba(216, 211, 211, 1);
-        position: static;
-        top: 0px;
-        padding-left: 0px;
-    }
-    
-    .productlistproductimg {
-        position: static;
-        top: 0px;
-        left: 0px;
-    }
-    .productlistimgsapplication{
-        font-size: 13px;
-    }
+  }
 }
 
-#menu{
-    background-color:#E84C52;
-    color: white;
-    border-radius: 0px 50px 0px ;
-    box-shadow: 8px 8px 20px 9px #00000040;
-
+#menu {
+  background-color: #e84c52;
+  color: white;
+  border-radius: 0px 50px 0px;
+  box-shadow: 8px 8px 20px 9px #00000040; cursor: pointer; 
 }
 .product-list-item-selected {
-    font-weight: bold;
+  font-weight: bold;
 }
-.prdimgs{
-    background-image: url('../img//productimgs/image\ 7.png');
-    background-size: cover;
+.prdimgs {
+  background-image: url("../img//productimgs/image\ 7.png");
+  background-size: cover;
 }
