--- a/src/assets/CSS/cards.css
+++ b/src/assets/CSS/cards.css
@@ -12,21 +12,21 @@
 .caontatctcardsubsection {
     background: rgba(255, 255, 255, 0.8);
     box-shadow: 8px 10px 25px 0px rgba(0, 0, 0, 0.25);
-    width: 300px;
+    width: 400px;
     position: absolute;
-    left: 90px;
+    left: 60px;
     bottom: 0px;
 }
 
-.caontatctcardsubsection p {
+.txtcontact {
     font-size: 14px;
 }
 @media screen and (min-width: 1600px) {
     .caontatctcardsubsection {
         
-        width: 370px;
+        width:  410px;
         position: absolute;
-        left: 130px;
+        left: 100px;
         bottom: 0px;
     }
     .caontatctcardsubsection p {
