--- a/src/pages/blogdetails.css
+++ b/src/pages/blogdetails.css
@@ -42,7 +42,7 @@
 }
 
 .getquoteformback {
-    background-image: url('../assets/img/DGHGF.png');
+    background-image: url('../assets/img/Group\ 1000004140\ \(1\)\ \(1\).png');
     /* D:\newpositive\positive_metering_front\src\assets\img\About\back 21.png */
     background-size: cover    ;
     background-repeat: no-repeat;
