--- a/src/assets/CSS/productlist.css
+++ b/src/assets/CSS/productlist.css
@@ -41,7 +41,12 @@
     top: 0px;
     padding-left: 0px;
   }
-
+  .produclistcontetst {
+    color: white;
+    list-style: none;
+    font-size: 13px;
+    border-bottom: 1px solid rgb(235, 213, 213);
+  }
   .productlistimgstitle {
     font-size: 70px;
     letter-spacing: 4px;
