--- a/src/assets/CSS/requestcall.css
+++ b/src/assets/CSS/requestcall.css
@@ -1,110 +1,119 @@
 .requestcallback {
-    height: 500px;
-    background-size: contain;
-    background-repeat: no-repeat;
+  height: 500px;
+  background-size: contain;
+  background-repeat: no-repeat;
 }
-
 
 @media only screen and (max-width: 767px) {
-    .requestcallback {
-        height: 530px;
-        background-size: cover;
-        background-repeat: no-repeat;
-        
-    }
+  .requestcallback {
+    height: 530px;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
 
-
-
-    .requestcallbackleft {
-        background: rgba(222, 222, 222, 0.79);
-        padding-left: 0px !important;
-        padding-right: 0px !important;
-        position: relative;
-        top: -691px !important;
-        
-    }
-    .viod{
-        padding-top: 240px;
-    }
-}
-
-.requestcallbackleft {
+  .requestcallbackleft {
     background: rgba(222, 222, 222, 0.79);
     padding-left: 0px !important;
     padding-right: 0px !important;
     position: relative;
-    top: -690px;
+    top: -691px !important;
+  }
+  .viod {
+    padding-top: 240px;
+  }
+}
 
+.requestcallbackleft {
+  background: rgba(222, 222, 222, 0.79);
+  padding-left: 0px !important;
+  padding-right: 0px !important;
+  position: relative;
+  top: -690px;
 }
 
 .requestcallbacklefttop {
-    background: rgba(238, 88, 93, 1);
-    position: relative;
+  background: rgba(238, 88, 93, 1);
+  position: relative;
 }
 
 .contentpara {
-    position: relative;
-    top: -800px;
-    background: rgba(222, 222, 222, 0.79);
-
+  position: relative;
+  top: -800px;
+  background: rgba(222, 222, 222, 0.79);
 }
 
 .contentpara1 {
-    position: relative;
-    top: -800px;
-    background: rgba(222, 222, 222, 0.79);
+  position: relative;
+  top: -800px;
+  background: rgba(222, 222, 222, 0.79);
 }
 
-.requesttext{
-    border: 1px solid rgb(224, 205, 205) !important;
-    background-color: white;
-    height: 80px;
-    padding: 30px;
-    color: #999;
-    border-radius: 20px;scrollbar-width: none;
-    
+.requesttext {
+  border: 1px solid rgb(224, 205, 205) !important;
+  background-color: white;
+  height: 80px;
+  padding: 30px;
+  color: #999;
+  border-radius: 20px;
+  scrollbar-width: none;
 }
 .requesttext::placeholder {
-    color: #999;
-
-
+  color: #999;
 }
 .requesttext:focus {
-    color: #999;
-    outline: none;
-    padding: 5px 20px ;
+  color: #999;
+  outline: none;
+  padding: 5px 20px;
 }
 .requestinput {
-    border: 1px solid rgb(224, 205, 205) !important;
-    background-color: white;
-    height: 40px;
-    border-radius: 30px;
-    padding: 0px 20px ;
-    color: #999;
+  border: 1px solid rgb(224, 205, 205) !important;
+  background-color: white;
+  height: 40px;
+  border-radius: 30px;
+  padding: 0px 20px;
+  color: #999;
 }
 
 .requestinput::placeholder {
-    color: #999;
-
+  color: #999;
 }
 
 .requestinput:focus {
-    color: #999;
-    outline: none;
-    padding: 0px 20px ;
+  color: #999;
+  outline: none;
+  padding: 0px 20px;
 }
 
 .formrequestbtn {
-    background: rgba(238, 88, 93, 1);
-    border-radius: 30px;
-    color: white;
-    border: none;
+  background: rgba(238, 88, 93, 1);
+  border-radius: 30px;
+  color: white;
+  border: none;
 }
 
 .requestinputlb {
-    font-size: 16px !important;
+  font-size: 16px !important;
 }
 
 .buttonpart {
-    margin-top: -500px;
+  margin-top: -500px;
+}
+.title {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+.description {
+  font-size: 16px;
+  line-height: 1.6;
+  margin-bottom: 20px;
+}
+.features {
+  font-size: 16px;
+  line-height: 1.6;
+  list-style-type: disc;
+  padding-left: 20px;
+}
+.features li {
+  margin-bottom: 10px;
 }
