--- a/src/assets/CSS/productlist.css
+++ b/src/assets/CSS/productlist.css
@@ -80,3 +80,7 @@
   background-image: url("../img//productimgs/image\ 7.png");
   background-size: cover;
 }
+.horizontal-scroll {
+  overflow-x: auto;
+  white-space: nowrap;
+}
