--- a/src/index.css
+++ b/src/index.css
@@ -28,20 +28,10 @@
     margin-top: 280px;
   }
 }
-.btn-close {
-  --bs-btn-close-color: #fff;
-  --bs-btn-close-bg: none !important;
-  --bs-btn-close-opacity: 0.5;
-  --bs-btn-close-hover-opacity: 0.75;
-  --bs-btn-close-focus-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
-  --bs-btn-close-focus-opacity: 1;
-  --bs-btn-close-disabled-opacity: 0.25;
-  --bs-btn-close-white-filter: invert(1) grayscale(100%) brightness(200%);
-  box-sizing: content-box;
 
-  color: var(--bs-btn-close-color);
-  background: transparent var(--bs-btn-close-bg) center / 1em auto no-repeat;
-  border: 0;
-  border-radius: 0.375rem;
-  opacity: var(--bs-btn-close-opacity);
+
+.captcha-container {
+  width: 200px !important;
+  transform-origin: 0 0; /* Adjust the origin to keep the position consistent */
+  margin-left: 7px;
 }
