--- a/src/assets/CSS/homebanner.css
+++ b/src/assets/CSS/homebanner.css
@@ -52,15 +52,17 @@
     background: linear-gradient(to left, rgba(238, 88, 93, 0) 0%, rgba(238, 88, 93, 0.2) 18.61%, rgba(238, 88, 93, 0.814196) 61.08%, #EE585D 81.38%);
     text-align: left;
     position: relative;
-    top: 490px;
+    top: -340px;
     padding: 50px;
     padding-right: 190px;
-    margin-right: -200px;
+    /* margin-right: -200px; */
     margin-left: 100px;
 
 }
 
-
+.contentbanner{
+    position: absolute;
+}
 
 .bannerform {
     background: transparent;
@@ -68,72 +70,19 @@
     border: 3px solid white;
     width: 300px;
     position: relative;
-    left: 85%;
-    top: 10px;
+    left: 75%;
+    top: -790px;
+}
+@media screen and (min-width: 1800px) {
+    .bannerform {
+        top: -490px;
+    }
 }
 
-@media screen and (min-width: 1600px) {
+
+@media screen and (min-width: 1900px) {
     .bannerform {
-        background: transparent;
-        color: white;
-        border: 3px solid white;
-        width: 400px;
-        position: relative;
-        left: 85%;
-        top: 10px;
-    }
-
-    .bannerinp {
-
-        width: 300px !important;
-
-        padding-bottom: 20px;
-        padding-top: 20px;
-        font-size: 1.2rem !important;
-        font-weight: 400;
-        line-height: 1.5;
-        color: white !important;
-
-        background-color: transparent !important;
-        background-clip: padding-box;
-        border-bottom: 1px solid white !important;
-        border-radius: 0px !important;
-        border-top: none !important;
-        border-left: none !important;
-        border-right: none !important;
-        height: 70px !important;
-
-    }
-
-    .bannertxtarea {
-        display: block;
-        width: 300px !important;
-        margin-left: 40px !important;
-        padding: 5px;
-        margin-top: 25px;
-        font-size: 1.2rem !important;
-        font-weight: 400;
-        line-height: 1.5;
-        color: white !important;
-
-        background-color: transparent !important;
-        background-clip: padding-box;
-        border: 1px solid white !important;
-        border-radius: 0px !important;
-        height: 100px;
-    }
-
-    .homebannertext {
-        background: linear-gradient(to left, rgba(238, 88, 93, 0) 0%, rgba(238, 88, 93, 0.2) 18.61%, rgba(238, 88, 93, 0.814196) 61.08%, #EE585D 81.38%);
-        text-align: left;
-        position: relative;
-        top: 580px;
-        padding: 50px;
-        padding-right: 190px;
-        font-size: 20px;
-        margin-right: -200px;
-        margin-left: 200px;
-
+        left: 0%;
     }
 }
 
