--- a/src/assets/CSS/mainbanner.css
+++ b/src/assets/CSS/mainbanner.css
@@ -38,8 +38,8 @@
 
 @media (max-width: 600px) {
     .oueprd {
-        font-size: 1.2rem !important;
-        line-height: 25px !important;
+        font-size: 25px !important;
+        font-weight: 700;
     }
 
     .ourprdimg {
