--- a/src/assets/CSS/homebanner.css
+++ b/src/assets/CSS/homebanner.css
@@ -126,7 +126,7 @@
 .bannertxtarea {
     display: block;
     width: 250px;
-    margin-left: 10px;
+    /* margin-left: 10px; */
     padding: 5px;
     margin-top: 25px;
     font-size: 1rem;
