--- a/src/pages/blogdetails.css
+++ b/src/pages/blogdetails.css
@@ -46,6 +46,7 @@
     /* D:\newpositive\positive_metering_front\src\assets\img\About\back 21.png */
     background-size: cover    ;
     background-repeat: no-repeat;
+    opacity: 0.7;
 }
 
 .formbacks {
