--- a/src/index.css
+++ b/src/index.css
@@ -35,3 +35,20 @@
   transform-origin: 0 0; /* Adjust the origin to keep the position consistent */
   margin-left: 7px;
 }
+.recaptcha-container {
+  transform: scale(0.75); /* Adjust the scale value as needed */
+  transform-origin: 0 0; /* Ensure the scaling is done from the top-left corner */
+  width: 100%;
+  height: 100%;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
