--- a/src/assets/CSS/aboutus.css
+++ b/src/assets/CSS/aboutus.css
@@ -65,7 +65,7 @@
 }
 
 .black-white-image {
-  /* filter: grayscale(100%); */
+  filter: grayscale(100%);
   transition: filter 0.3s ease-out;
 }
 
@@ -83,18 +83,23 @@
 .plungercard {
   box-shadow: 5px 5px 0px 0px #00000040;
   background: #efefef;
-  height: 160px;
+  height: 230px;
   width: 170px !important;
 }
-
+.carousel-indicators [data-bs-target]{
+  background-color: black !important;
+}
 @media (max-width: 526px) {
   .plungercard {
     box-shadow: 5px 5px 2px 0px #00000040;
     background: #efefef;
-    height: 190px;
-    width: 170px !important;
+    height: 230px;
+    width: 150px !important;
   }
-
+  .producttabimgscr{
+    height: 200px;
+    width: 100%;
+  }
   .teamimg {
     height: 300px;
     width: 100%;
@@ -127,8 +132,8 @@
   padding-left: 20px;
 }
 .prdimg {
-  height: auto;
-  width: auto;
+  height: 200px !important;
+  width: 200px !important;
 }
 
 .sencodetext {
@@ -202,4 +207,7 @@
 
   color: white;
   width: 350px;
+}
+.producttabimgscr{
+  height: 400px;
 }
