--- a/src/assets/CSS/aboutus.css
+++ b/src/assets/CSS/aboutus.css
@@ -89,7 +89,12 @@
 .carousel-indicators [data-bs-target]{
   background-color: black !important;
 }
-@media (max-width: 526px) {
+@media (max-width: 726px) {
+  .prdimg {
+    height: 150px !important;
+    width: 150px !important;
+  }
+  
   .plungercard {
     box-shadow: 5px 5px 2px 0px #00000040;
     background: #efefef;
@@ -132,8 +137,8 @@
   padding-left: 20px;
 }
 .prdimg {
-  height: 200px !important;
-  width: 200px !important;
+  height: 150px !important;
+  width: 150px !important;
 }
 
 .sencodetext {
