--- a/src/assets/CSS/productlist.css
+++ b/src/assets/CSS/productlist.css
@@ -77,7 +77,8 @@
   font-weight: bold;
 }
 .prdimgs {
-  background-image: url("../img//productimgs/image\ 7.png");
+  background-image: url("../img/productimgs/image\ 7.png");
+  /* background-image: url("../img/Group\ 1000004140\ \(1\)\ \(1\).png"); */
   background-size: cover;
 }
 .horizontal-scroll {
