--- a/src/assets/CSS/cards.css
+++ b/src/assets/CSS/cards.css
@@ -17,6 +17,7 @@
   .txtcontact {
     font-size: 11px !important;
   }
+ 
 }
 
 .caontatctcardsubsection {
@@ -31,6 +32,10 @@
 .txtcontact {
   font-size: 14px;
 }
+.txtcontact1{
+  font-size: 11px !important;
+
+}
 @media screen and (min-width: 1800px) {
   .caontatctcardsubsection {
     width: 410px;
@@ -40,5 +45,9 @@
   }
   .caontatctcardsubsection p {
     font-size: 17px;
+  }
+  .txtcontact1{
+    font-size: 15px !important;
+  
   }
 }
