--- a/src/assets/CSS/shophome.css
+++ b/src/assets/CSS/shophome.css
@@ -21,12 +21,10 @@
 }
 
 .ok {
-  background: linear-gradient(
-    252.95deg,
-    #ffffff 28.58%,
-    rgba(235, 235, 235, 0.47) 63.27%,
-    rgba(115, 115, 115, 0) 83.38%
-  );
+  background: linear-gradient(252.95deg,
+      #ffffff 28.58%,
+      rgba(235, 235, 235, 0.47) 63.27%,
+      rgba(115, 115, 115, 0) 83.38%);
   height: 350px;
 }
 
@@ -37,6 +35,7 @@
   height: 400px;
   /* width: 350px; */
 }
+
 @media screen and (max-width: 570px) {
   .testback {
     background: rgb(255, 255, 255);
@@ -109,8 +108,27 @@
   width: 130px;
   border: 7px solid rgb(242, 236, 236);
   box-shadow: 4px 4px 40px 0px #00000040;
-}
+  text-align: center;
+  align-content: center;
+  background-color: #EE585D ;
+  color:  white;
+  /* background: linear-gradient(to left, rgba(238, 88, 93, 0) 0%, rgba(238, 88, 93, 0.2) 18.61%, rgba(238, 88, 93, 0.814196) 61.08%, #EE585D 81.38%); */
 
+}
+.testomonialprofile2 {
+  position: relative;
+  bottom: 40px;
+  border-radius: 50%;
+  height: 80px;
+  width: 80px;
+  border: 7px solid rgb(242, 236, 236);
+  box-shadow: 4px 4px 40px 0px #00000040;
+  text-align: center;
+  align-content: center;
+  color:  white;
+  background: linear-gradient(to left, rgba(238, 88, 93, 0) 0%, rgba(238, 88, 93, 0.2) 18.61%, rgba(238, 88, 93, 0.814196) 61.08%, #EE585D 81.38%);
+
+}
 .profileposition {
   position: relative;
   top: 70px;
@@ -127,20 +145,22 @@
   background: rgb(255, 255, 255);
   border-radius: 15px;
   box-shadow: 4px 4px 40px 0px #00000040;
-  height: 300px;
+  height: 350px;
   padding: 30px;
   padding-top: 60px;
   margin: 20px;
 }
+
 .testback2 {
   background: rgb(255, 255, 255);
   border-radius: 15px;
   box-shadow: 4px 4px 40px 0px #00000040;
-  height: auto;
+  height: auto !important;
   padding: 30px;
   padding-top: 60px;
   margin: 20px;
 }
+
 .testback h1 {
   font-size: 30px;
   letter-spacing: 3px;
@@ -172,6 +192,7 @@
   font-family: "Poppins", sans-serif;
   font-size: 40px !important;
 }
+
 @media screen and (min-width: 1600px) {
   .BannerT {
     font-size: 20px !important;
